<resources>
    <string name="app_name">Databases</string>
    <string name="login_create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="friendName">Friend Name</string>
    <string name="clumsiness">Clumsiness</string>
    <string name="awesome">Awesome</string>
    <string name="gymFrequency">Gym Frequency</string>
    <string name="trust">Trustworthiness</string>
    <string name="moneyOwed">Money Owed</string>
    <string name="clumsinessMin">1</string>
    <string name="clumsinessMax">10</string>
    <string name="gymFrequencyMin">0</string>
    <string name="gymFrequencyMax">7</string>
    <string name="no">No</string>
    <string name="yes">YES</string>
    <string name="save">Save</string>
    <string name="dollar">$</string>
    <string name="remove">Remove Profile</string>
    <string name="sortByName">Sort by Name</string>
    <string name="sortByMoneyOwed">Sort by Money Owed</string>
    <string name="logout">Logout</string>
</resources>
