<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editText_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:autoText="false"
        android:ems="10"
        android:hint="@string/friendName"
        android:inputType="textPersonName"
        android:text="@string/friendName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.011"
        android:imeOptions="actionDone"/>

    <TextView
        android:id="@+id/textView_detail_clumsinessText"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="168dp"
        android:text="@string/clumsiness"
        app:layout_constraintEnd_toEndOf="@+id/editText_detail_name"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_detail_name" />

    <SeekBar
        android:id="@+id/seekBar_detail_clumsinessSlider"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:max="9"
        android:progress="1"
        app:layout_constraintStart_toStartOf="@+id/textView_detail_clumsinessText"
        app:layout_constraintTop_toBottomOf="@+id/textView_detail_clumsinessText" />

    <Switch
        android:id="@+id/switch_detail_isAwesomeSwitch"
        android:layout_width="295dp"
        android:layout_height="49dp"
        android:layout_marginTop="88dp"
        android:text="@string/awesome"
        android:textOff="@string/no"
        android:textOn="@string/yes"
        app:layout_constraintStart_toStartOf="@+id/seekBar_detail_clumsinessSlider"
        app:layout_constraintTop_toBottomOf="@+id/seekBar_detail_clumsinessSlider" />

    <TextView
        android:id="@+id/textView_detail_gymFrequencyText"
        android:layout_width="151dp"
        android:layout_height="29dp"
        android:layout_marginTop="68dp"
        android:text="@string/gymFrequency"
        app:layout_constraintStart_toStartOf="@+id/switch_detail_isAwesomeSwitch"
        app:layout_constraintTop_toBottomOf="@+id/switch_detail_isAwesomeSwitch" />

    <SeekBar
        android:id="@+id/seekBar_detail_gymFrequencySlider"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="290dp"
        android:layout_height="46dp"
        android:max="12"
        android:progress="1"
        app:layout_constraintStart_toStartOf="@+id/textView_detail_gymFrequencyText"
        app:layout_constraintTop_toBottomOf="@+id/textView_detail_gymFrequencyText" />

    <TextView
        android:id="@+id/textView_detail_trustText"
        android:layout_width="111dp"
        android:layout_height="21dp"
        android:layout_marginTop="88dp"
        android:text="@string/trust"
        app:layout_constraintStart_toStartOf="@+id/seekBar_detail_gymFrequencySlider"
        app:layout_constraintTop_toBottomOf="@+id/seekBar_detail_gymFrequencySlider" />

    <RatingBar
        android:id="@+id/ratingBar_detail_trustRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="0.5"
        app:layout_constraintStart_toStartOf="@+id/textView_detail_trustText"
        app:layout_constraintTop_toBottomOf="@+id/textView_detail_trustText" />

    <TextView
        android:id="@+id/textView_detail_moneyOwed"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginTop="64dp"
        android:text="@string/moneyOwed"
        app:layout_constraintStart_toStartOf="@+id/ratingBar_detail_trustRate"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar_detail_trustRate" />

    <EditText
        android:id="@+id/editText_detail_moneyOwedAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/textView_detail_moneyOwed"
        app:layout_constraintTop_toBottomOf="@+id/textView_detail_moneyOwed"
        android:imeOptions="actionDone"/>

    <TextView
        android:id="@+id/textView_detail_clumsinessMin"
        android:layout_width="31dp"
        android:layout_height="29dp"
        android:text="@string/clumsinessMin"
        app:layout_constraintStart_toStartOf="@+id/seekBar_detail_clumsinessSlider"
        app:layout_constraintTop_toBottomOf="@+id/seekBar_detail_clumsinessSlider" />

    <TextView
        android:id="@+id/textView_detail_clumsinessMax"
        android:layout_width="28dp"
        android:layout_height="32dp"
        android:text="@string/clumsinessMax"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="@+id/seekBar_detail_clumsinessSlider"
        app:layout_constraintTop_toBottomOf="@+id/seekBar_detail_clumsinessSlider" />

    <TextView
        android:id="@+id/textView_detail_gymFrequncyMin"
        android:layout_width="35dp"
        android:layout_height="22dp"
        android:text="@string/gymFrequencyMin"
        app:layout_constraintStart_toStartOf="@+id/seekBar_detail_gymFrequencySlider"
        app:layout_constraintTop_toBottomOf="@+id/seekBar_detail_gymFrequencySlider" />

    <TextView
        android:id="@+id/textView_detail_gymFrequencyMax"
        android:layout_width="43dp"
        android:layout_height="22dp"
        android:text="@string/gymFrequencyMax"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="@+id/seekBar_detail_gymFrequencySlider"
        app:layout_constraintTop_toBottomOf="@+id/seekBar_detail_gymFrequencySlider" />

</androidx.constraintlayout.widget.ConstraintLayout>