<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_list_moneyOwed"
        android:layout_width="167dp"
        android:layout_height="114dp"
        android:layout_marginStart="12dp"
        android:text="@string/moneyOwed"
        app:layout_constraintStart_toEndOf="@+id/textView_list_friendName"
        app:layout_constraintTop_toTopOf="@+id/textView_list_friendName" />

    <TextView
        android:id="@+id/textView_list_friendName"
        android:layout_width="194dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/friendName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_list_trustworthiness"
        android:layout_width="81dp"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:text="@string/trust"
        app:layout_constraintStart_toStartOf="@+id/textView_list_friendName"
        app:layout_constraintTop_toBottomOf="@+id/textView_list_friendName" />
</androidx.constraintlayout.widget.ConstraintLayout>